# easy-python-ai-cookiecutter

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  pyproject.toml  ruff.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json  post-install.sh
{{ cookiecutter.project_slug }}/environments/: Dockerfile
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
