[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [" {{ cookiecutter.author }} <{{ cookiecutter.author_email }}> "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = ">=8.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
