[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{ cookiecutter.author}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest = ">=8.3.0"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.8.0"
ruff = ">=0.5.7"
{% if cookiecutter.mypy == 'y' %}
mypy = "^1.11.1"
{% endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

{% if cookiecutter.mypy == 'y' %}
[tool.mypy]
strict = false
{% endif %}